Configurato Maven per generare i file JAR client e server nella cartella `bin`